--- a/app/src/main/res/layout/activity_memo_write.xml
+++ b/app/src/main/res/layout/activity_memo_write.xml
@@ -5,11 +5,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MemoWriteActivity"
+    tools:context=".memo.MemoWriteActivity"
     android:background="@color/ivory"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/ivory"
