--- a/app/src/main/res/menu/navi_menu.xml
+++ b/app/src/main/res/menu/navi_menu.xml
@@ -1,34 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="single">
-        <item android:title="Title A"
-            android:id="@+id/item_memo">
+    <group>
+        <item android:title="Workspace"
+            android:id="@+id/memo_list">
             <menu>
                 <item
                     android:id="@+id/account"
-                    android:title="계정"
-                    android:icon="@drawable/ic_sidemenu_dehaze_24"/>
+                    android:title="     - 집"/>
                 <item
                     android:id="@+id/setting"
-                    android:title="설정"/>
+                    android:title="     - 학교"/>
                 <item
                     android:id="@+id/logout"
-                    android:title="로그아웃"/>
+                    android:title="     - ABCDEFGHIJKLMNOPQRSTUVWXYZ"/>
             </menu>
         </item>
         <item android:title="Title B"
-            android:id="@+id/item_wifi">
+            android:id="@+id/place_list">
             <menu>
                 <item
                     android:id="@+id/account1"
-                    android:title="계정"
-                    android:icon="@drawable/ic_sidemenu_dehaze_24"/>
+                    android:title="     - 계정"/>
                 <item
                     android:id="@+id/setting1"
-                    android:title="설정"/>
+                    android:title="     - 설정"/>
                 <item
                     android:id="@+id/logout1"
-                    android:title="로그아웃"/>
+                    android:title="     - 로그아웃"/>
             </menu>
         </item>
     </group>
